# BNapp

./: .env.example  .gitignore  README.md  gen_ai_icons.py  gen_icons.py  index.html  main.spec  package-lock.json  package.json  tailwind.config.js  vite.config.js  软件需求说明文档.md
.deepseek/: instructions.md
.github/workflows/: build-release.yml
backend/: analyzer.py  environment.yml  main.py  model_factory.py  requirements.txt  settings_api.py
scripts/: build-local.ps1  git-commit.bat  git-commit.ps1
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: main-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DataHealthCheck.vue  DataImporter.vue  DecisionCenter.vue  HelpModal copy.vue  HelpModal.vue  SettingsModal.vue  VisualizationDashboard.vue
